# AI

./: .gitignore  CLAUDE.md  README.md  ghibli_grass.json  ghibli_grass_roundtrip.json  json_mover.py  qwen_node_assistant.py  test_curve_root_import.py  test_debug.py  test_import.py  test_qna_import.py  test_roundtrip.py
.github/workflows/: build-test.yml  scrape.yml
blender_scraper/: CMakeLists.txt  build.sh  build_msvc.bat  config.example.json  filter_dataset.py  setup_windows.bat
blender_scraper/src/: apify_client.hpp  build_dataset.cpp  github_client.hpp  http_client.hpp  main.cpp  rate_limiter.hpp  scraper.hpp  token_rotator.hpp
